more of IE fixes, updating README and example

--- a/example.html
+++ b/example.html
@@ -11,6 +11,7 @@
 	<script src="js/jquery/jquery-1.4.2.min.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/jquery-ui/jquery-ui-1.8.core-and-interactions.min.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/jquery-ui/jquery-ui-1.8.autocomplete.min.js" type="text/javascript" charset="utf-8"></script>
+	<script src="js/ie-compat.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/tag-it.js" type="text/javascript" charset="utf-8"></script>
 
 	<script>
